--- a/content/pages/patrocinadores.html
+++ b/content/pages/patrocinadores.html
@@ -25,9 +25,61 @@
                 </div>
                 <div class="col-md-4">
                     <div class="thumbnail">
+                        <img src="{filename}/images/patrocinadores/artezul.jpg" />
+                        <div class="caption">
+                            <h3>Artezul</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="{filename}/images/patrocinadores/blumar.gif" />
+                        <div class="caption">
+                            <h3>BLUMAR Tenerife S.L.</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="{filename}/images/patrocinadores/canarea.jpg" />
+                        <div class="caption">
+                            <h3>Canarea Consultores</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/vida.jpg" />
                         <div class="caption">
                             <h3>Centros Médicos Clínica Vida</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="{filename}/images/patrocinadores/cocacola.jpg" />
+                        <div class="caption">
+                            <h3>Coca Cola</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="{filename}/images/patrocinadores/cyt.gif" />
+                        <div class="caption">
+                            <h3>c&amp;t speaking experience</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="{filename}/images/patrocinadores/dentalcasanova.jpg" />
+                        <div class="caption">
+                            <h3><a href="http://dentalcasanova.com">Centro Odontológico Santiago Casanova</a></h3>
                         </div>
                     </div>
                 </div>
@@ -43,30 +95,22 @@
                 </div>
                 <div class="col-md-4">
                     <div class="thumbnail">
-                        <img src="{filename}/images/patrocinadores/cocacola.jpg" />
-                        <div class="caption">
-                            <h3>Coca Cola</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="thumbnail">
-                        <img src="{filename}/images/patrocinadores/muevete.gif" />
-                        <div class="caption">
-                            <h3> Muévete ocio educativo</h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/fuentealta.png" />
                         <div class="caption">
                             <h3>Fuentealta</h3>
                         </div>
                     </div>
                 </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="{filename}/images/patrocinadores/insoyeso.jpg" />
+                        <div class="caption">
+                            <h3>Insoyeso</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-md-4">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/intersport.jpg" />
@@ -77,9 +121,17 @@
                 </div>
                 <div class="col-md-4">
                     <div class="thumbnail">
-                        <img src="{filename}/images/patrocinadores/muevetetenerife.gif" />
+                        <img src="{filename}/images/patrocinadores/naturhouse.jpg" />
                         <div class="caption">
-                            <h3>Muévete Tenerife</h3>
+                            <h3>Natur House</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="{filename}/images/patrocinadores/macdonalds.jpg" />
+                        <div class="caption">
+                            <h3>McDonalds</h3>
                         </div>
                     </div>
                 </div>
@@ -87,9 +139,35 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="thumbnail">
-                        <img src="{filename}/images/patrocinadores/canarea.jpg" />
+                        <img src="{filename}/images/patrocinadores/muevete.jpg" />
                         <div class="caption">
-                            <h3>Canarea Consultores</h3>
+                            <h3>Muévete ocio educativo</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="{filename}/images/patrocinadores/multiopticas.jpg" />
+                        <div class="caption">
+                            <h3>Multiópticas Orotava</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="{filename}/images/patrocinadores/mutuatinerfena.jpg" />
+                        <div class="caption">
+                            <h3>Mutua Tinerfeña</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="{filename}/images/patrocinadores/taoro.jpg" />
+                        <div class="caption">
+                            <h3>TAORO Terraza-Restaurante</h3>
                         </div>
                     </div>
                 </div>
@@ -98,40 +176,6 @@
                         <img src="{filename}/images/patrocinadores/todomovil.gif" />
                         <div class="caption">
                             <h3>Todo Móvil y + Telefonía Libre </h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="thumbnail">
-                        <img src="{filename}/images/patrocinadores/cyt.gif" />
-                        <div class="caption">
-                            <h3>c&amp;t speaking experience</h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="thumbnail">
-                        <img src="{filename}/images/patrocinadores/artezul.jpg" />
-                        <div class="caption">
-                            <h3>Artezul</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="thumbnail">
-                        <img src="{filename}/images/patrocinadores/blumar.gif" />
-                        <div class="caption">
-                            <h3>BLUMAR Tenerife S.L.</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="thumbnail">
-                        <img src="{filename}/images/patrocinadores/taoro.jpg" />
-                        <div class="caption">
-                            <h3>TAORO Terraza-Restaurante</h3>
                         </div>
                     </div>
                 </div>
@@ -254,22 +298,6 @@
                         <img src="{filename}/images/patrocinadores/maderassantana.jpg" />
                         <div class="caption">
                             <h3>Maderas Santana</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img src="{filename}/images/patrocinadores/mutuatinerfena.jpg" />
-                        <div class="caption">
-                            <h3>Mutua Tinerfeña</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img src="{filename}/images/patrocinadores/multiopticas.jpg" />
-                        <div class="caption">
-                            <h3>Multiópticas Orotava</h3>
                         </div>
                     </div>
                 </div>
