--- a/content/pages/inicio.html
+++ b/content/pages/inicio.html
@@ -15,7 +15,8 @@
                             A las 08:00 horas
                         </h4>
                     </div>
-                    <a class="btn btn-warning btn-lg" href="https://auxiliadoracross.trackingsport.com/publicweb/events/modalidades.xhtml?o=WEBMAXU">Novedad <i class="fa fa-pencil-square-o"></i> Inscripción online!</a>
+                    <!--<a class="btn btn-warning btn-lg" href="https://auxiliadoracross.trackingsport.com/publicweb/events/modalidades.xhtml?o=WEBMAXU">Novedad <i class="fa fa-pencil-square-o"></i> Inscripción online!</a>-->
+                    <a class="btn btn-success btn-lg" href="{filename}resultados.html">Novedad <i class="fa fa-list"></i> Resultados!</a>
                 </div>
                 <div class="col-sm-4">
                     <h3><i class="fa fa-clock-o"></i> <a href="{filename}historia.html">Historia</a></h3>
