--- a/content/pages/resultados.html
+++ b/content/pages/resultados.html
@@ -1,12 +1,19 @@
 <html>
     <head>
         <title>Resultados</title>
-        <meta name="order" content="7" />
-        <meta name="status" content="hidden" />
-        <!--<meta name="save_as" content="resultados.html" />-->
+        <meta name="order" content="0" />
     </head>
     <body>
         <h2>Resultados y orden de llegada de la presente edición.</h2>
-        <p>Para consultar mas detalles sobre la carrera y recorrido, dirigirse a la Web</p>
+        <ul>
+            <li><i class="fa fa-file-pdf-o"></i> <a href="/pdfs/00400.pdf">400m</a></li>
+            <li><i class="fa fa-file-pdf-o"></i> <a href="/pdfs/00500.pdf">500m</a></li>
+            <li><i class="fa fa-file-pdf-o"></i> <a href="/pdfs/00800.pdf">800m</a></li>
+            <li><i class="fa fa-file-pdf-o"></i> <a href="/pdfs/01000.pdf">1km</a></li>
+            <li><i class="fa fa-file-pdf-o"></i> <a href="/pdfs/02000.pdf">2km</a></li>
+            <li><i class="fa fa-file-pdf-o"></i> <a href="/pdfs/03000.pdf">3km</a></li>
+            <li><i class="fa fa-file-pdf-o"></i> <a href="/pdfs/05000.pdf">5km</a></li>
+            <li><i class="fa fa-file-pdf-o"></i> <a href="/pdfs/10000.pdf">10km</a></li>
+        </ul>
     </body>
 </html>
